--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/next?serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
+spring.cloud.alicloud.access-key=LTAIc2K9ch8GC21b
+spring.cloud.alicloud.secret-key=vAtWD5kxUemmbxwqGAe00rYxE5J3cY
+spring.cloud.alicloud.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
+
