--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-alicloud-oss</artifactId>
+			<version>0.9.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
